--- a/About.html
+++ b/About.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        background-color: #f0f0f0;
+    }
+    h1 {
+        color: gray;
+        margin: 30px;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        text-align: center;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 36px;
+    }
+    nav a {
+        margin-right: 15px;
+        text-decoration: none;
+        color: #007BFF;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+</style>
 <body>
     <h1>About me</h1>
       <hr>
